Ticket #29446: Fix minor asthetic issues on tablet and mobile breakpoints of slider

--- a/website/static/website/css/init/_constants.scss
+++ b/website/static/website/css/init/_constants.scss
@@ -47,6 +47,7 @@ $gutter-side-mobile: 20px;
 $gutter-side-tablet: 20px;
 $gutter-side-desktop: 70px;
 
+$breakpoint-smartphone-landscape: 400px;
 $breakpoint-tablet: 768px;
 $breakpoint-notebook: 992px;
 $breakpoint-desktop: 1200px;
